# python-template

./: .editorconfig  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  cspell.json  mkdocs.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: codecov.yaml  pytest.yaml
docs/: index.md  requirements.txt  requirements_docs.txt
docs/documentation/: hello_world.md
docs/examples/: test.ipynb
tests/: test_hello_world.py
