[tool.poetry]
name = "Python Template"
version = "0.1.2"
description = "Dolore fugiat ullamco voluptate incididunt voluptate voluptate magna esse eiusmod velit deserunt cillum ut do."
authors = ["Felix Hoffmann <felix.emmanuel.hoffmann@gmail.com>"]
keywords = ["python", "template", "project"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "python_template" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"
poetry-dotenv-plugin = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.8.0" }
isort = "^5.10.1"
mypy = "^0.981"
types-requests = "^2.28.11.2"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-autorefs = "^0.4.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
pymdown-extensions = "^9.8"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.mypy]
mypy_path = "python_template"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
